# boxinggym-eval

./: .gitattributes  .gitignore  HF_SPACE_README.md  LICENSE  Makefile  README.md  README_upstream.md  boxing-gym-fb-pvt-key.json  collect_eig.py  evaluation_results.json  fix_module_path.py  hf_requirements.txt  hf_space_app.py  launch_missing_regret.sh  llm_eig.sh  llm_missing_eig.sh  monitor_eig.sh  ppl_gen_model.py  pyproject.toml  rebuttal.py  requirements.txt  run_eig_regret.py  run_experiment.py  scan_eig.py  setup.py  test.py  test_lm.py
.progress_tracking/: claude_boxloop_progress.txt  claude_experiments_progress.txt  discovery_progress.txt  eig_regret_progress.txt  gpt-4o_non_direct_goals_progress.txt  llm_eig_progress.txt  oed_progress.txt  openai_boxloop_progress.txt  openai_discovery_progress.txt  openai_oed_progress.txt  openthinker_discovery_progress.txt  openthinker_oed_progress.txt  qwen_eig_regret_progress.txt
analysis/: analysis_experiments.ipynb  boxing_gym_analysis.ipynb  discovery-box.ipynb  discovery.ipynb  eig_check_2models.ipynb  eig_check_all_models.ipynb  eig_check_prior_noprior.ipynb  experiment_error.ipynb  gpt-4o-boxloop_oed_formatted_results.txt  gpt-4o-boxloop_oed_results.txt  oed-box.ipynb  oed-criticism.ipynb  oed-michael.ipynb  oed.ipynb  plot_utils.py  test.ipynb
conf/: box_loop.yaml  claude_box_loop.yaml  claude_config.yaml  config.yaml  config_eig.yaml
results/: OpenThinker-32B_oed_direct_all_environments.csv  OpenThinker-32B_oed_direct_eig_by_obs.csv  OpenThinker-7B_oed_direct_all_environments.csv  OpenThinker-7B_oed_direct_eig_by_obs.csv  OpenThinker-7b_discovery_direct_discovery_all_environments.csv  claude-3-7-sonnet-20250219_oed_direct_all_environments.csv  claude-3-7-sonnet-20250219_oed_direct_eig_by_obs.csv  claude-3-7-sonnet-20250219_oed_direct_errors_by_obs.csv  gpt-4o-boxloop_oed_results.csv  gpt-4o-boxloop_oed_sheets_format.csv  gpt-4o-boxloop_oed_sheets_format.txt  gpt-4o_discovery_direct_discovery_all_environments.csv  gpt-4o_oed_direct_all_environments.csv  gpt-4o_oed_direct_eig_by_obs.csv  gpt-4o_oed_direct_errors_by_obs.csv  qwen2.5-32b-instruct_discovery_direct_discovery_all_environments.csv  (+4 more)
scripts/: deepseek_r1.sh  (+73 more)
(+2391 files in other folders)
