[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boxing-gym"
version = "0.1.0"
description = "Benchmarking framework for experimental-design agents"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }
dependencies = [
    "annotated-types==0.7.0",
    "anthropic==0.33.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.4.0",
    "arviz==0.19.0",
    "cachetools==5.4.0",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "cloudpickle==3.0.0",
    "cons==0.4.6",
    "contourpy==1.2.1",
    "cycler==0.12.1",
    "distro==1.9.0",
    "dm-tree==0.1.8",
    "etuples==0.3.9",
    "filelock==3.15.4",
    "fonttools==4.53.1",
    "fsspec==2024.6.1",
    "h11==0.14.0",
    "h5netcdf==1.3.0",
    "h5py==3.11.0",
    "httpcore==1.0.5",
    "httpx==0.27.0",
    "huggingface-hub==0.24.5",
    "hydra-core==1.3.2",
    "idna==3.7",
    "jiter>=0.10.0",
    "kiwisolver==1.4.5",
    "litellm @ git+https://github.com/BerriAI/litellm.git@main",
    "logical-unification==0.4.6",
    "markdown-it-py==3.0.0",
    "matplotlib==3.9.1.post1",
    "mdurl==0.1.2",
    "miniKanren==1.0.3",
    "multipledispatch==1.0.0",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "openai==2.11.0",
    "packaging==24.1",
    "pandas==2.2.2",
    "pillow==10.4.0",
    "pydantic==2.8.2",
    "pydantic_core==2.20.1",
    "Pygments==2.18.0",
    "pymc==5.13.1",
    "pyparsing==3.1.2",
    "pytensor==2.20.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.1",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "rich==13.7.1",
    "scipy==1.14.0",
    "seaborn==0.13.2",
    "six==1.16.0",
    "sniffio==1.3.1",
    "tenacity>=9.1.2",
    "tokenizers==0.20.0",
    "toolz==0.12.1",
    "tqdm==4.66.5",
    "typing_extensions==4.12.2",
    "tzdata==2024.1",
    "urllib3==2.2.2",
    "wandb==0.23.1",
    "weave==0.52.22",
    "xarray==2024.7.0",
    "xarray-einstats==0.7.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
